# AI_Exam_Prep_Generator

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: main.py
app/models/: request_model.py
app/routes/: exam.py  pdf.py
app/services/: gemini_service.py
