[project]
name = "ai-exam-prep-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "google-generativeai>=0.8.6",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
